--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </a>
         <a href="https://x.com/ComprasCdc" target="_blank">
           <div class="icon">
-            <img src="logos/x.png" alt="Ícone do X" loading="lazy">
+            <img src="logos/X.png" alt="Ícone do X" loading="lazy">
           </div>
           <span>X</span>
         </a>
