--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </a>
         <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&r=nametag" target="_blank">
           <div class="icon">
-            <img src="logos/instagram.png" alt="Ícone do Instagram" loading="lazy">
+            <img src="logos/Instagram.png" alt="Ícone do Instagram" loading="lazy">
           </div>
           <span>Instagram</span>
         </a>
