--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados." />
   <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
   <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta property="og:image" content="logos/centrodecompras.jpg">
+  <meta property="og:image" content="logos/logoscentrodecompras.jpeg">
   <meta property="og:url" content="https://centrodecompra.com.br/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
