--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <header class="site-header">
     <div class="logo-container">
       <a href="#">
-        <img src="logos/centrodecompras.jpg" alt="Centro de Compras" loading="lazy" id="site-logo" />
+        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" loading="lazy" id="site-logo" />
       </a>
     </div>
     <div class="header-text">
