--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <header class="site-header">
     <div class="logo-container">
       <a href="#">
-        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" loading="lazy" id="site-logo" />
+        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" loading="lazy" id="site-logo-img" />
       </a>
     </div>
     <div class="header-text">
@@ -117,7 +117,7 @@
     <a href="contato">Contato</a>
   </nav>
 
- <div class="container">
+  <div class="container">
     <aside class="sidebar">
       <h3>Categorias</h3>
       <ul>
@@ -237,214 +237,6 @@
     </a>
   </div>
 
-  <script>
-    // Variáveis globais para o carrossel no modal
-    let currentImages = [];
-    let currentImageIndex = 0;
-
-    // Atualizar ano no footer
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Detectar triplo clique no logotipo para redirecionar para admin-xyz-123.html
-    const logo = document.getElementById('site-logo');
-    let clickCount = 0;
-    let clickTimer = null;
-    logo.addEventListener('click', () => {
-      clickCount++;
-      if (clickCount === 1) {
-        clickTimer = setTimeout(() => {
-          clickCount = 0;
-        }, 500); // 500ms para detectar cliques rápidos
-      } else if (clickCount === 3) {
-        clearTimeout(clickTimer);
-        window.location.href = 'admin-xyz-123.html';
-        clickCount = 0;
-      }
-    });
-
-    // Carregar produtos do arquivo produtos.json
-    async function carregarProdutos(filtroCategoria = 'todas', filtroLoja = 'todas', termoBusca = '') {
-      const gridProdutos = document.getElementById('grid-produtos');
-      const mensagemVazia = document.getElementById('mensagem-vazia');
-      const errorMessage = document.getElementById('error-message');
-      const loadingSpinner = document.getElementById('loading-spinner');
-
-      loadingSpinner.style.display = 'block';
-      gridProdutos.innerHTML = ''; // Limpar o grid
-      mensagemVazia.style.display = 'none';
-      errorMessage.style.display = 'none';
-
-      try {
-        const response = await fetch('/produtos.json', { cache: 'no-store' });
-        if (!response.ok) {
-          throw new Error(`Erro ao carregar produtos.json: ${response.status} ${response.statusText}`);
-        }
-        const produtos = await response.json();
-
-        if (!Array.isArray(produtos)) {
-          throw new Error('produtos.json não é uma lista válida');
-        }
-
-        const produtosFiltrados = produtos.filter(produto => {
-          const matchesCategoria = filtroCategoria === 'todas' || produto.categoria.toLowerCase() === filtroCategoria.toLowerCase();
-          const matchesLoja = filtroLoja === 'todas' || produto.loja.toLowerCase() === filtroLoja.toLowerCase();
-          const matchesBusca = termoBusca === '' || produto.nome.toLowerCase().includes(termoBusca.toLowerCase());
-          return matchesCategoria && matchesLoja && matchesBusca;
-        });
-
-        if (produtosFiltrados.length === 0) {
-          mensagemVazia.style.display = 'block';
-          gridProdutos.style.display = 'none';
-        } else {
-          mensagemVazia.style.display = 'none';
-          gridProdutos.style.display = 'grid';
-          produtosFiltrados.forEach((produto, produtoIndex) => {
-            const produtoDiv = document.createElement('div');
-            produtoDiv.classList.add('produto-card', 'visible');
-            produtoDiv.setAttribute('data-categoria', produto.categoria.toLowerCase());
-            produtoDiv.setAttribute('data-loja', produto.loja.toLowerCase());
-
-            const imagens = produto.imagens && produto.imagens.length > 0 ? produto.imagens : ['imagens/placeholder.jpg'];
-            const carrosselId = `carrossel-${produtoIndex}`;
-            produtoDiv.innerHTML = `
-              <div class="carrossel" id="${carrosselId}">
-                <div class="carrossel-imagens">
-                  ${imagens.map((img, i) => `<img src="${img}" alt="${produto.nome}" loading="lazy" onclick="openModal(${produtoIndex}, ${i})">`).join('')}
-                </div>
-                ${imagens.length > 1 ? `
-                  <button class="carrossel-prev" onclick="moveCarrossel('${carrosselId}', -1)">◄</button>
-                  <button class="carrossel-next" onclick="moveCarrossel('${carrosselId}', 1)">►</button>
-                  <div class="carrossel-dots">
-                    ${imagens.map((_, i) => `<span class="carrossel-dot ${i === 0 ? 'ativo' : ''}" onclick="setCarrosselImage('${carrosselId}', ${i})"></span>`).join('')}
-                  </div>
-                ` : ''}
-              </div>
-              <span>${produto.nome}</span>
-              <span class="descricao">Loja: ${produto.loja}</span>
-              <a href="${produto.link}" target="_blank" class="ver-na-loja ${produto.loja.toLowerCase()}">Comprar</a>
-            `;
-            gridProdutos.appendChild(produtoDiv);
-          });
-        }
-      } catch (error) {
-        console.error('Erro ao carregar produtos:', error);
-        errorMessage.textContent = 'Erro ao carregar os produtos. Tente novamente mais tarde.';
-        errorMessage.style.display = 'block';
-        mensagemVazia.style.display = 'none';
-        gridProdutos.style.display = 'none';
-      }
-
-      loadingSpinner.style.display = 'none';
-    }
-
-    function moveCarrossel(carrosselId, direction) {
-      const carrossel = document.getElementById(carrosselId);
-      const imagens = carrossel.querySelector('.carrossel-imagens');
-      const dots = carrossel.querySelectorAll('.carrossel-dot');
-      let currentIndex = parseInt(imagens.dataset.index || 0);
-      const totalImagens = imagens.children.length;
-
-      currentIndex = (currentIndex + direction + totalImagens) % totalImagens;
-      imagens.style.transform = `translateX(-${currentIndex * 100}%)`;
-      imagens.dataset.index = currentIndex;
-
-      dots.forEach((dot, i) => dot.classList.toggle('ativo', i === currentIndex));
-    }
-
-    function setCarrosselImage(carrosselId, index) {
-      const carrossel = document.getElementById(carrosselId);
-      const imagens = carrossel.querySelector('.carrossel-imagens');
-      const dots = carrossel.querySelectorAll('.carrossel-dot');
-
-      imagens.style.transform = `translateX(-${index * 100}%)`;
-      imagens.dataset.index = index;
-
-      dots.forEach((dot, i) => dot.classList.toggle('ativo', i === index));
-    }
-
-    async function openModal(produtoIndex, imageIndex) {
-      const modal = document.getElementById('imageModal');
-      const carrosselImagens = document.getElementById('modalCarrosselImagens');
-      const carrosselDots = document.getElementById('modalCarrosselDots');
-
-      try {
-        const response = await fetch('/produtos.json', { cache: 'no-store' });
-        if (!response.ok) throw new Error('Erro ao carregar produtos.json');
-        const produtos = await response.json();
-        currentImages = produtos[produtoIndex]?.imagens && produtos[produtoIndex].imagens.length > 0 ? produtos[produtoIndex].imagens : ['imagens/placeholder.jpg'];
-        currentImageIndex = imageIndex;
-
-        carrosselImagens.innerHTML = currentImages.map(img => `<img src="${img}" alt="Imagem ampliada">`).join('');
-        carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
-
-        carrosselDots.innerHTML = currentImages.map((_, i) => `<span class="carrossel-dot ${i === currentImageIndex ? 'ativo' : ''}" onclick="setModalCarrosselImage(${i})"></span>`).join('');
-
-        modal.style.display = 'flex';
-      } catch (error) {
-        console.error('Erro ao abrir modal:', error);
-      }
-    }
-
-    function moveModalCarrossel(direction) {
-      const carrosselImagens = document.getElementById('modalCarrosselImagens');
-      const carrosselDots = document.getElementById('modalCarrosselDots').children;
-      const totalImagens = currentImages.length;
-
-      currentImageIndex = (currentImageIndex + direction + totalImagens) % totalImagens;
-      carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
-
-      Array.from(carrosselDots).forEach((dot, i) => dot.classList.toggle('ativo', i === currentImageIndex));
-    }
-
-    function setModalCarrosselImage(index) {
-      const carrosselImagens = document.getElementById('modalCarrosselImagens');
-      const carrosselDots = document.getElementById('modalCarrosselDots').children;
-      currentImageIndex = index;
-      carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
-      Array.from(carrosselDots).forEach((dot, i) => dot.classList.toggle('ativo', i === currentImageIndex));
-    }
-
-    function closeModal() {
-      const modal = document.getElementById('imageModal');
-      modal.style.display = 'none';
-      currentImages = [];
-      currentImageIndex = 0;
-    }
-
-    document.getElementById('imageModal').addEventListener('click', e => {
-      if (e.target === e.currentTarget) closeModal();
-    });
-
-    function filtrarPorCategoria(categoria) {
-      const itensCategoria = document.querySelectorAll('.categoria-item');
-      itensCategoria.forEach(item => item.classList.remove('ativa'));
-      document.querySelector(`.categoria-item[data-categoria="${categoria}"]`).classList.add('ativa');
-
-      const termoBusca = document.getElementById('busca').value;
-      const filtroLoja = document.querySelector('.loja.ativa, .loja-todas.ativa')?.dataset.loja || 'todas';
-      carregarProdutos(categoria, filtroLoja, termoBusca);
-    }
-
-    function filtrarPorLoja(loja) {
-      const itensLoja = document.querySelectorAll('.loja, .loja-todas');
-      itensLoja.forEach(item => item.classList.remove('ativa'));
-      document.querySelector(`[data-loja="${loja}"]`).classList.add('ativa');
-
-      const termoBusca = document.getElementById('busca').value;
-      const filtroCategoria = document.querySelector('.categoria-item.ativa')?.dataset.categoria || 'todas';
-      carregarProdutos(filtroCategoria, loja, termoBusca);
-    }
-
-    document.getElementById('busca').addEventListener('input', e => {
-      const termoBusca = e.target.value;
-      const filtroCategoria = document.querySelector('.categoria-item.ativa')?.dataset.categoria || 'todas';
-      const filtroLoja = document.querySelector('.loja.ativa, .loja-todas.ativa')?.dataset.loja || 'todas';
-      carregarProdutos(filtroCategoria, filtroLoja, termoBusca);
-    });
-
-    document.addEventListener('DOMContentLoaded', () => {
-      carregarProdutos();
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
