--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados." />
   <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
   <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta property="og:image" content="logos/centrodecompras.jpg">
+  <meta property="og:image" content="logos/logoscentrodecompras.jpeg">
   <meta property="og:url" content="https://centrodecompra.com.br/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
   <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta name="twitter:image" content="logos/centrodecompras.jpg">
+  <meta name="twitter:image" content="logos/logoscentrodecompras.jpeg">
   <title>Centro de Compras - Ofertas do Dia</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -100,7 +100,7 @@
 <body>
   <header class="site-header">
     <div class="logo-container">
-      <a href="#">
+      <a href="javascript:void(0)">
         <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" loading="lazy" id="site-logo-img" />
       </a>
     </div>
