--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -194,8 +194,14 @@
   <script>
     // Verificar autenticação
     if (!localStorage.getItem('adminToken')) {
-      alert('Acesso não autorizado. Por favor, clique três vezes no logotipo na página inicial para autenticar.');
-      window.location.href = '/index.html';
+      const tempToken = new URLSearchParams(window.location.search).get('tempToken');
+      if (tempToken === 'triple-click-access') {
+        localStorage.setItem('adminToken', 'temp-token-' + Date.now());
+      } else {
+        alert('Acesso não autorizado. Por favor, clique três vezes no logotipo na página inicial para autenticar.');
+        window.location.href = '/index.html';
+        return;
+      }
     }
 
     const API_URL = 'https://centrodecompra-backend.onrender.com';
@@ -206,7 +212,7 @@
     // Função para escapar HTML e evitar XSS
     function escapeHTML(str) {
       return str.replace(/[&<>"']/g, (match) => ({
-        '&': '&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&#39;'
+        '&': '&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&apos;'
       }[match]));
     }
 
